Fix footer spacing issues, wrong input type issue

--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
 
 .navbar-dark .navbar-brand {
@@ -14,6 +14,15 @@ body {
 .author-text a {
   color: white;
   text-decoration: none;
+}
+
+footer {
+  height: 60px;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
 
 @media (min-width: 48em) {
