--- a/public/interday.css
+++ b/public/interday.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
 
 .navbar-dark .navbar-brand {
@@ -27,4 +27,13 @@ body {
 
 #download-button {
   cursor: pointer;
+}
+
+footer {
+  height: 60px;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
